--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
       <!-- Main -->
       <main class="flex items-center justify-center h-screen w-screen p-6">
         <!-- Card -->
-        <div id="card" class="relative bg-grayishBlue p-8 flex flex-col items-center justify-center rounded-lg space-y-10 h-[400px] max-w-[500px]">
+        <div id="card" class="relative bg-grayishBlue p-8 flex flex-col items-center justify-center rounded-lg h-[400px] max-w-[500px] min-w-[430px]">
           <!-- Advice ID -->
-          <p class="text-neonGreen uppercase font-bold tracking-widest">Advice #<span id="id">117</span></p>
+          <div id="id-container" class="absolute top-10">
+            <p class="text-neonGreen uppercase font-bold tracking-widest">Advice #117</p>
+          </div>
           <!-- Quote -->
           <div class="quote-container">
             <blockquote class="text-lightCyan text-center text-3xl font-bold">"It is easy to sit up and take notice, whats difficult is getting up and taking action."</blockquote>
           </div>
           <!-- Bottom Border -->
-          <div class="flex items-center justify-center mb-10 space-x-0">
-            <span class="w-full h-[1px] bg-lightCyan"></span>
-            <img src="images/pattern-divider-mobile.svg" alt="" />
-            <span class="w-full h-[1px] bg-lightCyan"></span>
+          <div class="flex items-center justify-center absolute bottom-20">
+            <img src="images/pattern-divider-desktop.svg" alt="" class="m-0 p-0 block" />
           </div>
           <!-- Button -->
           <div class="absolute -bottom-10 bg-neonGreen flex items-center justify-center w-20 h-20 rounded-full">
